WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62922
indexForVisiblePosition(const VisiblePosition& visiblePosition) does not consider shadow content
https://bugs.webkit.org/show_bug.cgi?id=62922
Summary
indexForVisiblePosition(const VisiblePosition& visiblePosition) does not cons...
Justin Garcia
Reported
2011-06-17 18:35:01 PDT
indexForVisiblePosition(const VisiblePosition& visiblePosition) does not visiblePositions in shadow content.
Attachments
patch
(13.09 KB, patch)
2011-06-28 16:11 PDT
,
Justin Garcia
no flags
Details
Formatted Diff
Diff
updated patch
(10.31 KB, patch)
2011-06-28 18:21 PDT
,
Justin Garcia
no flags
Details
Formatted Diff
Diff
patch
(10.47 KB, patch)
2011-06-28 23:27 PDT
,
Justin Garcia
enrica
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Justin Garcia
Comment 1
2011-06-28 16:11:14 PDT
Created
attachment 98991
[details]
patch
WebKit Review Bot
Comment 2
2011-06-28 16:14:45 PDT
Attachment 98991
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/edit..." exit_code: 1 Source/WebCore/editing/InsertListCommand.cpp:155: Declaration has space between type name and * in Element *scope [whitespace/declaration] [3] Source/WebCore/editing/InsertListCommand.cpp:155: Use 0 instead of NULL. [readability/null] [5] Source/WebCore/editing/htmlediting.cpp:1027: Declaration has space between type name and * in Document *document [whitespace/declaration] [3] Source/WebCore/editing/htmlediting.cpp:1029: Declaration has space between type name and * in Element *root [whitespace/declaration] [3] Source/WebCore/editing/htmlediting.cpp:1030: Declaration has space between type name and * in Node *shadowRoot [whitespace/declaration] [3] Source/WebCore/editing/ApplyBlockElementCommand.cpp:84: Declaration has space between type name and * in Element *startScope [whitespace/declaration] [3] Source/WebCore/editing/ApplyBlockElementCommand.cpp:84: Use 0 instead of NULL. [readability/null] [5] Source/WebCore/editing/ApplyBlockElementCommand.cpp:86: Declaration has space between type name and * in Element *endScope [whitespace/declaration] [3] Source/WebCore/editing/ApplyBlockElementCommand.cpp:86: Use 0 instead of NULL. [readability/null] [5] Total errors found: 9 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Justin Garcia
Comment 3
2011-06-28 16:16:08 PDT
Comment on
attachment 98991
[details]
patch Clearing review flag to fix style issues.
Justin Garcia
Comment 4
2011-06-28 18:21:21 PDT
Created
attachment 99018
[details]
updated patch
Andy Estes
Comment 5
2011-06-28 22:35:25 PDT
Comment on
attachment 99018
[details]
updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=99018&action=review
I have a few style comments.
> WebCore/editing/htmlediting.cpp:1035 > + root = static_cast<Element *>(shadowRoot);
This should be static_cast<Element*>() per the style guide.
> WebCore/editing/htmlediting.cpp:1047 > + RefPtr<Range> range = Range::create(document, > + firstPositionInNode(root), > p.parentAnchoredEquivalent()); > +
The last two lines should be regularly indented, not lined up with the '('.
> WebCore/editing/htmlediting.cpp:1054 > + // indexForVisiblePosition can create a
Can create a what?
Justin Garcia
Comment 6
2011-06-28 23:27:49 PDT
Created
attachment 99043
[details]
patch Updated the patch to address the problems Andy pointed out.
Enrica Casucci
Comment 7
2011-06-29 10:06:17 PDT
Comment on
attachment 99043
[details]
patch Looks good to me.
Justin Garcia
Comment 8
2011-06-29 17:11:45 PDT
http://trac.webkit.org/changeset/90072
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug