Source/WebCore/editing/VisiblePosition.h
@@ -79,6 +79,7 @@ public:
     UChar32 characterAfter() const;
     UChar32 characterBefore() const { return previous().characterAfter(); }
 
+    // FIXME: This does not handle [table, 0] correctly.
     Element* rootEditableElement() const { return m_deepPosition.isNotNull() ? m_deepPosition.deprecatedNode()->rootEditableElement() : 0; }
     
     void getInlineBoxAndOffset(InlineBox*& inlineBox, int& caretOffset) const
